# CrossFive

./: CMakeLists.txt
dep/SDL_image/: IMG_bmp.c  IMG_jpg.c
dep/SDL_net/: SDLnetsys.h
dep/jpeg/include/: jpeglib.h
include/: opcodes.h  shared.h
include/client/: global.h  interface.h  network.h
include/server/: gameplay.h  global.h
src/client/: interface.cpp  main.cpp  network.cpp
src/server/: CMakeLists.txt  gameplay.cpp  main.cpp
win/Piskvorky/: Piskvorky.sln
win/Piskvorky/Piskvorky/: Piskvorky.vcproj
win/PiskvorkyServer/: PiskvorkyServer.sln
win/PiskvorkyServer/PiskvorkyServer/: PiskvorkyServer.vcproj
